--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.5.4",
     "jquery": "1.12",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
     "update": "^0.7.4",
     "zone.js": "~0.8.26"
